# practice

./: CMakeLists.txt  README.md  a51_1.c  sample.tex
docs/: 2chapters.tex  allchapters.tex  allchaptersfinal.tex  practice.tex  practise.tex  sample.aux  sample.blg  sample.tex  sample.toc  second.tex  thirdchptr.tex
include/: a51.h  decoder.h  encoder.h
src/: a51.c  decoder.c  encoder.c  encoder_example.c  main.c
